fix overscroll issue on safari

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,6 @@
 body[data-locked="true"] .wrapper {
   overflow-y: hidden;
+  overscroll-behavior: none;
 }
 
 .wrapper {
