--- a/src/components/layout/Navigation.module.css
+++ b/src/components/layout/Navigation.module.css
@@ -5,6 +5,7 @@
   width: 100%;
   position: fixed;
   pointer-events: none;
+  overscroll-behavior: none;
 }
 
 .mobileNavContainer.show {
